Revision history for Perl extension MooseX-Getopt

0.31 Wed 7 Jul 2010
  * Fix issue causing tests to fail if MooseX::SimpleConfig isn't installed.

0.30 Tue 6 Jul 2010
  * MooseX::Getopt::Basic
    - uses attribute insertion order when determining the order in which
      options are documented in the usage (e.g. in $obj->usage->text). (Karen
      Etheridge)

  * MooseX::Getopt::Basic
    - store the usage object to the usage attr (RT#58715)
    - properly checks whether the *option* --help, --usage, or --? were used,
      rather than the attribute 'help', 'usage' or '?' were set
  * MooseX::Getopt::GLD
    - add the usage attribute for storing the Getopt::Long::Descriptive::Usage
      object, and the help attribute for storing --help, --usage and --? state
  (RT#47865, RT#56783, RT#52474).  (Karen Etheridge)

  * MooseX::Getopt::Basic
    - Disable auto_help config in Getopt::Long, to avoid calling into
    pod2usage when the --help option is used while MooseX::ConfigFromFile
    is in use (the intent is just to fetch the value of the configfile
    option) (RT#57683). (Karen Etheridge)

0.29 Tue. Jun 15 2010
  * Fix repository metadata. Thanks Robert Bohne for noticing!

0.28 Sat. Jun 05 2010
  * MooseX::Getopt::Strict
    - Make it work with Getopt attribute traits in addition to
      attribute metaclasses.

  * Switch from Module::Install to Dist::Zilla.

0.27 Sun. Feb 10 2010
  * Makefile.PL:
    - Bump dependency to Getopt::Long::Descriptive to 0.081 in an attempt to
      avoid test failures.

  * MooseX::Getopt::Dashes
    - Document that using a cmd_flag argument to attributes can be used to
      override the tr/_/-/ replacement ::Dashes does on attribute names

0.26 Thu. Dec 10 2009
  * MooseX::Getopt::Basic
    - Fix bug with attribute names containing upper case letters.
  * Test suite:
    - Add t/106_no_ignore_case.t for testing the compatibility with
      no_ignore_case

0.25 Thu. Nov 26 2009
  * MooseX::Getopt